# docs/swagger.yaml
@@ -79,6 +79,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get all comments
       tags:
       - comments
@@ -108,6 +110,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a comment
       tags:
       - comments
@@ -135,6 +139,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete a comment
       tags:
       - comments
@@ -157,6 +163,8 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get comment by ID
       tags:
       - comments
@@ -195,6 +203,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Update a comment
       tags:
       - comments
@@ -234,6 +244,15 @@ paths:
       consumes:
       - application/json
       description: Retrieve a list of all posts in the system
+      parameters:
+      - description: 'Page number (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Number of profiles per page (default: 5)'
+        in: query
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
@@ -247,6 +266,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get all posts
       tags:
       - posts
@@ -276,6 +297,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a new post
       tags:
       - posts
@@ -305,6 +328,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete a post by ID
       tags:
       - posts
@@ -333,6 +358,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get a post by ID
       tags:
       - posts
@@ -371,9 +398,52 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Update an existing post
       tags:
       - posts
+  /v1/profiles:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of profiles for a specific account by account ID
+        with pagination
+      parameters:
+      - description: 'Page number (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Number of profiles per page (default: 5)'
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Profile'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/service.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/service.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get profiles
+      tags:
+      - authors
   /v1/profiles/{id}:
     delete:
       consumes:
@@ -400,6 +470,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete a profile by ID
       tags:
       - authors
@@ -432,6 +504,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get profile by ID
       tags:
       - authors
@@ -470,6 +544,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/service.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Update an existing profile
       tags:
       - authors
